--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ html{
 body{
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 .sec1{
     display:flex;
@@ -69,17 +69,17 @@ span{
     gap:2rem;
     background-color:#E8D8C4;
     width:100%;
-    height: 30;   
+    height: 30rem;   
     
 }
 .cadre3{
-    width:30%
+    width:45%;
     height: 20rem;
     padding:2rem 2rem;
 
 }
 .cadre4{
-    width:30%
+    width:45%;
     height:2rem;
     padding:2rem 2rem ;
 }
@@ -94,6 +94,7 @@ footer{
     background-color:#000000;
     width:100%;
     height:6rem;
+    
    
 }
 .icon{
@@ -102,37 +103,61 @@ footer{
     height: 5rem;
     padding-top: 0.5rem;
 }
-@media screen and(max-width:430px) {
+@media screen and (max-width: 430px){
     html{
-        display: none;
-        font-size: 8px;
-    }
-    body{
-        font-size: 7px;
-        visibility: hidden;
-        overflow: hidden;
+        
+        font-size: 10px;
     }
     .sec1{
-        visibility: visible;
-        width: 10rem;
+        width: 100%;
+        height: 45rem;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .cadre2{
+        width: 20%;
         height: 5rem;
+        margin-right: 25rem;
+        padding-top: 3rem;
+    }
+
+    .image{
+        width: 40rem;
+        height: 25rem;
+        padding-bottom: 0;
+        padding-right: 25rem;
+        margin: 2rem;
     }
     h1{
-        font-size: 2rem;
-        padding-right: 5rem;
+        width: 40rem;
+        font-size: 4rem;
+        padding-right: 20rem;
+        padding-bottom: 0;
     }
-    span{
-        padding-right: 5rem;
-        font-size: 1.5rem;
+    
+    .cadre1{
+        width: 30%;
+        height: 30rem;
+        
     }
-    .image{
-        padding-right: 30rem;
+    .sec2{
+        height: 113rem;
     }
     footer{
-        width: 10%;
+        
+        position: relative;
+        justify-content: center;
+        width: 45%;
         height: 4rem;
+        padding-left: 13rem;
+        margin: 0 5rem;
     }
     .icon{
-        gap:0.2rem;
+        justify-content: center;
+        gap: 4rem;
+        width: 9%;
+        height: 3rem;
+        padding-right: 14rem;
     }
+    
 }
